# qcapi

./: .gitignore  README.md  connect.ipynb  pyproject.toml
docs/: _config.yml  index.md
qcapi/: Untitled-1.ipynb  __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py
scripts/: publish-tray.ps1
tests/: __init__.py  test_auth.py  test_cli.py  test_config.py
windows/: Qcapi.WindowsHub.sln  README.md
windows/Qcapi.Tray/: BackendExtractor.cs  BackendSummary.cs  BackendsForm.cs  Diagnostics.cs  IbmIamTokenProvider.cs  JobExtractor.cs  JobSummary.cs  Program.cs  Qcapi.Tray.csproj  QcapiConfig.cs  QiskitConfigLoader.cs  QiskitRuntimeClient.cs  TrayApplication.cs  TrayIconLoader.cs
