[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qcapi"
version = "0.1.0"
description = "Minimal Python client/CLI for the IBM Quantum Qiskit Runtime REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qcapi = "qcapi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qcapi*"]

